"alt" den Bildern hinzugefügt

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -97,7 +97,7 @@
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal1">
-                        <img src="Bilder/hund1.png" class="img-responsive"/>
+                        <img src="Bilder/hund1.png" class="img-responsive" alt="Buster"/>
                         </button>
                     </div>
 
@@ -130,7 +130,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal2">
-                        <img src="Bilder/katze1.png" class="img-responsive"/>
+                        <img src="Bilder/katze1.png" class="img-responsive" alt="Spencer"/>
                     </button>
                     </div>
 
@@ -158,7 +158,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal3">
-                        <img src="Bilder/hund2.png" class="img-responsive"/>
+                        <img src="Bilder/hund2.png" class="img-responsive" alt="Berti"/>
                     </button>
                     </div>
 
@@ -191,7 +191,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal4">
-                        <img src="Bilder/ziege1.png" class="img-responsive"/>
+                        <img src="Bilder/ziege1.png" class="img-responsive" alt="BIOS"/>
                     </button>
                     </div>
                     <!-- Modal -->
@@ -220,7 +220,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal5">
-                        <img src="Bilder/nagetier1.png" class="img-responsive"/>
+                        <img src="Bilder/nagetier1.png" class="img-responsive" alt="Quintus"/>
                     </button>
                     </div>
 
@@ -248,7 +248,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal6">
-                        <img src="Bilder/ziege2.png" class="img-responsive"/>
+                        <img src="Bilder/ziege2.png" class="img-responsive" alt="Simone"/>
                     </button>
                     </div>
 
@@ -276,7 +276,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal7">
-                        <img src="Bilder/nagetier2.png" class="img-responsive"/>
+                        <img src="Bilder/nagetier2.png" class="img-responsive" alt="Ludwig"/>
                     </button>
                     </div>
 
@@ -304,7 +304,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal8">
-                        <img src="Bilder/ziege3.png" class="img-responsive"/>
+                        <img src="Bilder/ziege3.png" class="img-responsive" alt="Ritschi"/>
                     </button>
                     </div>
                     <!-- Modal -->
@@ -333,7 +333,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal9">
-                        <img src="Bilder/hund3.png" class="img-responsive"/>
+                        <img src="Bilder/hund3.png" class="img-responsive"alt="Hagrid"/>
                     </button>
                     </div>
 
@@ -359,7 +359,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal10">
-                        <img src="Bilder/nagetier3.png" class="img-responsive"/>
+                        <img src="Bilder/nagetier3.png" class="img-responsive" alt="Freddi"/>
                     </button>
                     </div>
 
@@ -388,7 +388,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal11">
-                        <img src="Bilder/katze2.png" class="img-responsive"/>
+                        <img src="Bilder/katze2.png" class="img-responsive" alt="Tolkien"/>
                     </button>
                     </div>
 
