fehlende schliesende tags hinzugefügt, hilftext den bildern hinzugefügt

--- a/src/galerie.html
+++ b/src/galerie.html
@@ -72,13 +72,13 @@
 
                 <div class="textBlock col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                    Lieber Besucher, <br /> <br />
+                    Lieber Besucher, <br> <br>
                     Sie möchten einem Tier ein neues Zu Hause geben? dann sind sie hier genau richtig!
                     In unserer Galerie haben Sie die Möglickeit unsere aktuellen Bewohner näher kennen zu lernen
                     und sich zu verlieben! Gerne können Sie Ihren neuen Liebling auch persönlich kennenlernen,
-                    hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular! <br />
-                    Wir freuen uns auf Ihren Besuch! <br /> <br />
-                    <d>Ihr Tierheim-Team </d>
+                    hierfür kontaktieren Sie uns Bitte telefonisch oder über unser praktisches Kontaktformular! <br>
+                    Wir freuen uns auf Ihren Besuch! <br> <br>
+                    <h5>Ihr Tierheim-Team </h5>
 
                 </div>
 
@@ -90,14 +90,14 @@
                     <button class="btn btn-default filter-button" data-filter="ziegen">Ziegen</button>
 
                 </div>
-                <br/>
+                <br>
                 <div class="platzhalter col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                 </div>
 
 
                 <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal1">
-                        <img src="Bilder/hund1.png" class="img-responsive" alt="Buster"/>
+                        <img src="Bilder/hund1.png" class="img-responsive" alt="Buster" title="Buster - klicken für mehr Infos"/>
                         </button>
                     </div>
 
@@ -106,7 +106,7 @@
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="ModalLabel"><d>Buster</d></h5>
+                        <h5 class="modal-title" id="ModalLabel">Buster</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                           <span aria-hidden="true">&times;</span>
                         </button>
@@ -130,7 +130,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                     <button type="button" class="btn" data-toggle="modal" data-target="#Modal2">
-                        <img src="Bilder/katze1.png" class="img-responsive" alt="Spencer"/>
+                        <img src="Bilder/katze1.png" class="img-responsive" alt="Spencer" title="Spencer - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -139,7 +139,7 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Spencer</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Spencer</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -158,7 +158,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal3">
-                        <img src="Bilder/hund2.png" class="img-responsive" alt="Berti"/>
+                        <img src="Bilder/hund2.png" class="img-responsive" alt="Berti" title="Berti - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -167,7 +167,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Berti</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Berti</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -191,7 +191,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal4">
-                        <img src="Bilder/ziege1.png" class="img-responsive" alt="BIOS"/>
+                        <img src="Bilder/ziege1.png" class="img-responsive" alt="BIOS" title="BIOS - klicken für mehr Infos"/>
                     </button>
                     </div>
                     <!-- Modal -->
@@ -199,7 +199,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>BIOS</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">BIOS</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -220,7 +220,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal5">
-                        <img src="Bilder/nagetier1.png" class="img-responsive" alt="Quintus"/>
+                        <img src="Bilder/nagetier1.png" class="img-responsive" alt="Quintus" title="Quintus - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -229,7 +229,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Quintus</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Quintus</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -248,7 +248,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal6">
-                        <img src="Bilder/ziege2.png" class="img-responsive" alt="Simone"/>
+                        <img src="Bilder/ziege2.png" class="img-responsive" alt="Simone" title="Simone - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -257,7 +257,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Simone</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Simone</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -276,7 +276,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal7">
-                        <img src="Bilder/nagetier2.png" class="img-responsive" alt="Ludwig"/>
+                        <img src="Bilder/nagetier2.png" class="img-responsive" alt="Ludwig" title="Ludwig - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -285,7 +285,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Ludwig</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Ludwig</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -304,7 +304,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter ziegen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal8">
-                        <img src="Bilder/ziege3.png" class="img-responsive" alt="Ritschi"/>
+                        <img src="Bilder/ziege3.png" class="img-responsive" alt="Ritschi" title="Ritschi - klicken für mehr Infos"/>
                     </button>
                     </div>
                     <!-- Modal -->
@@ -312,7 +312,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Ritschi</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Ritschi</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -333,7 +333,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter hunde">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal9">
-                        <img src="Bilder/hund3.png" class="img-responsive"alt="Hagrid"/>
+                        <img src="Bilder/hund3.png" class="img-responsive" alt="Hagrid" title="Hagrid - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -342,7 +342,7 @@
                       <div class="modal-dialog">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Hagrid</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Hagrid</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -359,7 +359,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter nagetiere">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal10">
-                        <img src="Bilder/nagetier3.png" class="img-responsive" alt="Freddi"/>
+                        <img src="Bilder/nagetier3.png" class="img-responsive" alt="Freddi" title="Freddi - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -368,7 +368,7 @@
                       <div class="modal-dialog" >
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Freddi</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Freddi</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -388,7 +388,7 @@
 
                     <div class="galerieFeld col-lg-4 col-md-6 col-sm-6 col-xs-6 filter katzen">
                         <button type="button" class="btn" data-toggle="modal" data-target="#Modal11">
-                        <img src="Bilder/katze2.png" class="img-responsive" alt="Tolkien"/>
+                        <img src="Bilder/katze2.png" class="img-responsive" alt="Tolkien" title="Tolkien - klicken für mehr Infos"/>
                     </button>
                     </div>
 
@@ -397,7 +397,7 @@
                       <div class="modal-dialog" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="ModalLabel"><d>Tolkien</d></h5>
+                            <h5 class="modal-title" id="ModalLabel">Tolkien</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Schließen">
                               <span aria-hidden="true">&times;</span>
                             </button>
@@ -414,10 +414,10 @@
                     </div>
 
                     <div class="gallery col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <h1 class="galerieTitel"></h1>
+                        <p class="galerieTitel"> Wir freuen uns auf Ihre Nachricht!</p>
                     </div>
                 </div>
-
+            </div>
     </section>
 
     <footer>
@@ -433,11 +433,11 @@
                               <a> <u>Spendenkonto:</u></a>
                           </li>
                           <li>
-                              <a> Musterbank Musterhausen </a></br>
+                              <a> Musterbank Musterhausen </a><br>
                               <a> IBAN DE11 2222 3333 4444 5555 66 </a>
                           </li>
                           <li>
-                              <a> <u>Spenden über Paypal:</u></a> </br>
+                              <a> <u>Spenden über Paypal:</u></a> <br>
 
                                 <input value="Spenden" onclick="popup=window.open('https://www.paypal.com/de/home')" type="button" />
 
@@ -452,8 +452,8 @@
                         </li>
 
                         <li>
-                            <a> Tierheim BIOS Musterhausen </a> </br>
-                            <a> Musterstraße 1 </a></br>
+                            <a> Tierheim BIOS Musterhausen </a> <br>
+                            <a> Musterstraße 1 </a><br>
                             <a> 12345 Musterstadt </a>
                         </li>
                         <li>
@@ -469,17 +469,17 @@
                               <a href="#">Infos</a>
                           </li>
                           <li>
-                              <a><u>Öffnungszeiten:</u></a> </br>
-                              <a> Montag bis Freitag: 13:30-17:30 Uhr </br>
-                                  Samstag: 10:00-12:00 Uhr</br>
+                              <a><u>Öffnungszeiten:</u></a> <br>
+                              <a> Montag bis Freitag: 13:30-17:30 Uhr <br>
+                                  Samstag: 10:00-12:00 Uhr<br>
                                   Sonntag und an Feiertagen geschlossen!
 
                                 </a>
                           </li>
                           <li>
-                              <a><u>Gassigeh und Kuschelzeiten :</u></a> </br>
-                              <a> Montag bis Freitag: 11:30-18:30 Uhr </br>
-                                  Samstag: 10:00-18:00 Uhr</br>
+                              <a><u>Gassigeh und Kuschelzeiten :</u></a> <br>
+                              <a> Montag bis Freitag: 11:30-18:30 Uhr <br>
+                                  Samstag: 10:00-18:00 Uhr<br>
 
 
                                 </a>
@@ -496,6 +496,7 @@
                   </div>
               </div>
           </div>
+      </div>
       </footer>
 
 </body>
