--- a/src/home.html
+++ b/src/home.html
@@ -8,14 +8,15 @@
          <link rel="stylesheet" href="css/bootstrap.min.css">
          <script src="js/jquery-1.10.2.js"></script>
          <script src="js/jquery-3.3.1.slim.min.js"></script>
-         <script src="js/popper.min.js"></script>
+
          <script src="javascript.js"></script>
          <script src="js/bootstrap.min.js"></script>
 
          <!--Stylesheet-->
-         <link href="css/style.css" rel="stylesheet">
 
          <link rel="stylesheet" href="css/style.css" />
+
+         <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 
     </head>
 
@@ -47,17 +48,11 @@
                     <a class="nav-link" href="formular.html">Kontakt</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="kalender.html">Kalender</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="imperssum.html">Impressum</a>
+                    <a class="nav-link" href="Impressum.html">Impressum</a>
                   </li>
 
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Suche nach etwas!" aria-label="Search">
-                  <button class="btn-navbar btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+
               </div>
             </nav>
           </section>
@@ -196,7 +191,7 @@
                   </div>
 
 <!-- Portfolio Gallery Grid -->
-                    <div class="row">
+                    <div class="Menschen row">
                       <div class="column Leiter">
                         <div class="content">
                           <img src="Bilder/Leiterin.jpg" alt="Leiterin1" style="height:10em; width: 7em;">
@@ -230,8 +225,8 @@
                     <div class="content">
                       <img src="Bilder/Mitarbeiter2.png" alt="Mitarbeiter2" style="height:10em; width: 7em;">
                       <hr/>
-                      <h4>Klaus Knast</h4>
-                       <p>Klaus ist das neueste Mitglied unseres Teams.</p>
+                      <h4>Zeus Ziege</h4>
+                       <p>Zeus ist das neueste Mitglied unseres Teams und unser Ziergenflüsterer.</p>
                      </div>
                    </div>
 
@@ -380,6 +375,7 @@
                       </div>
                   </div>
               </div>
+            </div>
           </footer>
         </body>
 
