--- a/src/form.html
+++ b/src/form.html
@@ -27,7 +27,7 @@
 
             <!-- Name -->
             <label for ="name">
-                Ihr Name:
+                <a href="#" class="tooltip2">Ihr Name:<span>Pflichtfeld</span></a>
                 <span class="required">*</span>
             </label>
             <div class="side-by-side">
@@ -37,7 +37,7 @@
 
             <!-- E-Mail -->
             <label for="email">
-                <a href="#" class="tooltip">Ihre E-Mail:<span>Pflichtfeld</span></a>
+                <a href="#" class="tooltip2">Ihre E-Mail:<span>Pflichtfeld</span></a>
                 <span class="required">*</span>
             </label>
             <input type="email" name="email" id="email" />
@@ -55,7 +55,7 @@
 
             <!-- Nachricht -->
             <label for="message">
-                Ihre Nachricht:
+                <a href="#" class="tooltip2">Ihre Nachricht:<span>Pflichtfeld</span></a>
                 <span class="required">*</span>
             </label>
             <textarea name="message" id="message" rows="4"></textarea>
